--- a/package.json
+++ b/package.json
@@ -1,13 +1,14 @@
 {
-  "name": "atom-language-velocity",
-  "version": "1.1.0",
+  "name": "velocity",
+  "version": "0.0.1",
   "description": "Adds support for the Velocity templating langauge to Atom.",
   "keywords": [
     "java",
     "apache",
-    "velocity"
+    "velocity",
+    "vtl"
   ],
-  "repository": "https://github.com/animecyc/AtomLanguageVelocity",
+  "repository": "https://github.com/Ingramz/atom-velocity",
   "license": "MIT",
   "main": "lib/velocity",
   "engines": {
